Enhance thesis chapters with detailed analyses, summaries, and algorithm comparisons for software license optimization, including dynamic simulations and model extensions.

--- a/docs/thesis/frontmatter/abstract_en.tex
+++ b/docs/thesis/frontmatter/abstract_en.tex
@@ -1,9 +1,10 @@
+\newpage
 \section*{Abstract}
 
-This thesis develops a graph-based model for optimizing software license purchases (e.g., Duolingo Super, Spotify Premium) in social networks. The problem is formulated as an extension of classical domination (including Roman domination) in graphs, incorporating realistic constraints on group sizes and pricing schemes for individual and group licenses.
+This thesis develops a graph-based optimization model for software license purchasing in social networks, incorporating realistic pricing schemes from platforms such as Duolingo Super and Spotify Premium. The problem is formulated as an extension of classical domination in graphs, introducing Roman domination variants with capacity constraints on license groups and differentiated cost structures for individual and group licenses.
 
-We analyze the computational complexity and show NP-hardness. We implement and compare exact methods (integer linear programming) with heuristic and metaheuristic approaches (greedy, genetic algorithm, tabu search, simulated annealing, ant colony optimization). Experiments are conducted on real-world Facebook ego networks and on synthetic graphs (Barabási-Albert, Erdős-Rényi, Watts-Strogatz).
+We provide a rigorous computational complexity analysis, proving NP-hardness via a reduction from the classical Dominating Set problem. We implement and systematically compare a broad suite of algorithmic approaches: exact methods (integer linear programming, ILP) alongside seven approximation algorithms, including construction heuristics (greedy, random, dominating-set-based) and metaheuristics (genetic algorithm, tabu search, simulated annealing, ant colony optimization). The experimental evaluation is conducted on ten real-world Facebook ego networks (53--1035 nodes) and on three families of synthetic graphs (Barabási--Albert, Erdős--Rényi, Watts--Strogatz) ranging from 50--450 nodes.
 
-Results indicate that metaheuristics (notably genetic algorithm, tabu search and simulated annealing) achieve near-optimal solutions with significantly lower runtime than ILP for larger instances. We also study a dynamic variant in which the network evolves over time and evaluate the impact of pricing policies and additional subscription types on optimal purchasing decisions.
+Results show that metaheuristics reach about 88--90\% of the optimum while reducing computation time by roughly one order of magnitude on larger instances compared to ILP. In static tests, ant colony optimization achieved the best results among metaheuristics (cost 0.506 vs 0.445 for ILP at an average time of 4.98~s vs 73.83~s). In dynamic experiments, the genetic algorithm offered the best quality-efficiency trade-off (cost 0.409 vs 0.362 for ILP at 0.615~s vs 1.525~s). We also analyze a dynamic scenario simulating network evolution over time, where algorithms exhibit good adaptability to topological changes. The study includes eight model extensions that incorporate diverse pricing policies and subscription types inspired by real digital platform offerings.
 
-\textbf{Keywords:} graph theory, combinatorial optimization, Roman domination, social networks, heuristics, metaheuristics, integer programming.
+\textbf{Keywords:} graph theory, combinatorial optimization, Roman domination, social networks, heuristics, metaheuristics, integer linear programming.
