--- a/docs/thesis/frontmatter/abstract_pl.tex
+++ b/docs/thesis/frontmatter/abstract_pl.tex
@@ -1,9 +1,9 @@
 \section*{Streszczenie}
 
-Celem niniejszej pracy magisterskiej było opracowanie grafowego modelu optymalizacji zakupu licencji oprogramowania (np. Duolingo Super, Spotify Premium) w sieciach społecznościowych. Problem ten sformułowano jako rozszerzenie klasycznego dominowania (w tym dominowania rzymskiego) w grafach, przy czym uwzględniono praktyczne ograniczenia dotyczące rozmiaru grup licencyjnych oraz struktury kosztów licencji indywidualnych i grupowych.
+Celem niniejszej pracy magisterskiej było opracowanie grafowego modelu optymalizacji zakupu licencji oprogramowania w sieciach społecznościowych z uwzględnieniem realnych schematów cenowych platform, takich jak Duolingo Super i Spotify Premium. Problem sformułowano jako rozszerzenie klasycznego dominowania w grafach, wprowadzając warianty dominowania rzymskiego z ograniczeniami pojemności grup licencyjnych oraz zróżnicowanymi strukturami kosztów licencji indywidualnych i grupowych.
 
-W pracy przeprowadzono analizę złożoności obliczeniowej problemu, wykazując jego NP-trudność. Zaimplementowano i porównano podejścia algorytmiczne: metody dokładne (ILP/MIP) oraz kilka metod przybliżonych i metaheurystyk (algorytm zachłanny, algorytm genetyczny, przeszukiwanie tabu, symulowane wyżarzanie, algorytm mrówkowy). Badania eksperymentalne wykonano na rzeczywistych ego-sieciach Facebooka oraz na danych syntetycznych (Barabási-Albert, Erdős-Rényi, Watts-Strogatz).
+Przeprowadzono rygorystyczną analizę złożoności obliczeniowej, wykazując NP-trudność problemu poprzez redukcję z klasycznego zagadnienia zbioru dominującego. Zaimplementowano i systematycznie porównano szerokie spektrum podejść algorytmicznych: metody dokładne (programowanie całkowitoliczbowe, ILP) oraz siedem algorytmów aproksymacyjnych, w tym heurystyki konstrukcyjne (zachłanny, losowy, oparty na zbiorze dominującym) i metaheurystyki (algorytm genetyczny, przeszukiwanie tabu, symulowane wyżarzanie, algorytm mrówkowy). Badania eksperymentalne wykonano na dziesięciu rzeczywistych sieciach ego Facebooka (53--1035 węzłów) oraz trzech rodzinach grafów syntetycznych (Barabási--Albert, Erdős--Rényi, Watts--Strogatz) o rozmiarach 50--450 węzłów.
 
-Wyniki pokazują, że metaheurystyki (w szczególności algorytm genetyczny, przeszukiwanie tabu i symulowane wyżarzanie) pozwalają osiągać rozwiązania bliskie optymalnym przy znacznym skróceniu czasu obliczeń względem ILP na większych instancjach. Dodatkowo przeanalizowano wariant dynamiczny, w którym sieć ulega zmianom w czasie, oraz wpływ polityk cenowych i dodatkowych typów planów subskrypcyjnych na optymalne decyzje.
+Wyniki pokazują, że metaheurystyki osiągają jakość rozwiązań na poziomie ok. 88--90\% optimum, przy redukcji czasu obliczeń o około jeden rząd wielkości na większych instancjach względem ILP. W testach statycznych algorytm mrówkowy uzyskał najlepsze wyniki wśród metaheurystyk (koszt 0.506 vs 0.445 dla ILP przy średnim czasie 4.98\,s vs 73.83\,s). W eksperymentach dynamicznych algorytm genetyczny stanowił najlepszy kompromis jakości i efektywności (koszt 0.409 vs 0.362 dla ILP przy czasie 0.615\,s vs 1.525\,s). Przeanalizowano także scenariusz dynamiczny symulujący ewolucję sieci w czasie, w którym algorytmy wykazały dobrą zdolność adaptacji do zmian topologii. Badania objęły ponadto osiem rozszerzeń modelu, uwzględniających zróżnicowane polityki cenowe i typy planów subskrypcyjnych inspirowane rzeczywistymi ofertami platform cyfrowych.
 
 \textbf{Słowa kluczowe:} teoria grafów, optymalizacja kombinatoryczna, dominowanie rzymskie, sieci społecznościowe, heurystyki, metaheurystyki, programowanie całkowitoliczbowe.
