Refactor tables and figures in model extensions chapter for consistency; update conclusion recommendations for clarity and formatting

--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -5,8 +5,14 @@
 
 \includepdf[pages=1,pagecommand={}]{assets/titlepage.pdf}
 
+\clearpage
+\thispagestyle{empty}
+\null
+\newpage
+
 \pagenumbering{arabic}
 \setcounter{page}{3}
+
 \input{frontmatter/abstract_pl}
 \input{frontmatter/abstract_en}
 
