szybkie korekty stylu

--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-\includepdf[pages=1,pagecommand={}]{assets/titlepage.pdf}
+\includepdf[pages=1,pagecommand={\thispagestyle{empty}}]{assets/titlepage.pdf}
 
 \clearpage
 \thispagestyle{empty}
