--- a/docs/thesis/frontmatter/list_of_symbols.tex
+++ b/docs/thesis/frontmatter/list_of_symbols.tex
@@ -12,9 +12,9 @@
     $\Delta$     & -- & maksymalny stopień grafu. \\
     $f:V\to\{0,1,2\}$ & -- & etykietowanie ról (0-odbiorca, 1-indywidualna, 2-grupowa). \\
     $\cost(f)$   & -- & koszt rozwiązania (def. w rozdz.\,\ref{sec:model-formal}). \\
-    $\mathcal{L}$ & -- & rodzina typów licencji $\ell_t=(c_t,\,\ell^{\min}_t,\,\ell^{\max}_t)$, w skrócie $(c_t,\,l_t,\,u_t)$. \\
+    $L$ & -- & rodzina typów licencji $l_t=(c_t,\,m_t,\,k_t)$, w skrócie $(c_t,\,m_t,\,k_t)$. \\
     $I,H,R$      & -- & zbiory: licencji indywidualnych, grupowych i odbiorców. \\
-    $p$          & -- & względny koszt licencji grupowej $p=c_g/c_1$. \\
+    $p$          & -- & względny koszt licencji grupowej $p=c_g/c_i$. \\
 \end{tabular}
 
 \section*{Skróty}
