--- a/docs/thesis/frontmatter/list_of_symbols.tex
+++ b/docs/thesis/frontmatter/list_of_symbols.tex
@@ -4,28 +4,29 @@
 \section*{Oznaczenia}
 
 \begin{tabular}{@{} l l p{0.72\textwidth} @{}}
-    $G=(V,E)$    & -- & graf relacji społecznych. \\
-    $V,E$        & -- & zbiory wierzchołków i krawędzi. \\
-    $N(v),\ N[v]$ & -- & sąsiedztwo wierzchołka $v$ oraz sąsiedztwo domknięte. \\
-    $\deg(v)$    & -- & stopień wierzchołka $v$. \\
-    $n=|V|,\ m=|E|$ & -- & liczba wierzchołków i krawędzi. \\
-    $\Delta$     & -- & maksymalny stopień grafu. \\
-    $f:V\to\{0,1,2\}$ & -- & etykietowanie ról (0-odbiorca, 1-indywidualna, 2-grupowa). \\
-    $\cost(f)$   & -- & koszt rozwiązania (def. w rozdz.\,\ref{sec:model-formal}). \\
-    $L$ & -- & rodzina typów licencji $l_t=(c_t,\,m_t,\,k_t)$, w skrócie $(c_t,\,m_t,\,k_t)$. \\
-    $I,H,R$      & -- & zbiory: licencji indywidualnych, grupowych i odbiorców. \\
-    $p$          & -- & względny koszt licencji grupowej $p=c_g/c_i$. \\
+    $G=(V,E)$    & -- & graf relacji społecznych \\
+    $V,E$        & -- & zbiory wierzchołków i krawędzi \\
+    $N(v),\ N[v]$ & -- & sąsiedztwo wierzchołka $v$ oraz sąsiedztwo domknięte \\
+    $\deg(v)$    & -- & stopień wierzchołka $v$ \\
+    $n=|V|,\ |E|$ & -- & liczba wierzchołków i krawędzi \\
+    $\Delta$     & -- & maksymalny stopień grafu \\
+    $f:V\to\{0,1,2\}$ & -- & etykietowanie ról (0-odbiorca, 1-indywidualna, 2-grupowa) \\
+    $\cost(f)$   & -- & koszt rozwiązania (def. w rozdz.\,\ref{sec:model-formal}) \\
+    $L$ & -- & rodzina typów licencji $l_t=(c_t,\,m_t,\,k_t)$, w skrócie $(c_t,\,m_t,\,k_t)$ \\
+    $I,H,R$      & -- & zbiory: licencji indywidualnych, grupowych i odbiorców \\
+    $p$          & -- & względny koszt licencji grupowej $p=c_g/c_i$ \\
 \end{tabular}
 
 \section*{Skróty}
 
 \begin{tabular}{@{} l l p{0.72\textwidth} @{}}
-    SaaS & -- & Software as a Service. \\
-    ILP/MIP & -- & (Mixed) Integer Linear Programming. \\
-    GA   & -- & Genetic Algorithm. \\
-    SA   & -- & Simulated Annealing. \\
-    TS   & -- & Tabu Search. \\
-    ACO  & -- & Ant Colony Optimization. \\
-    MDS  & -- & Minimum Dominating Set. \\
-    RD   & -- & Roman Domination. \\
+    APX  & -- & Approximation class (klasa problemów optymalizacyjnych aproksymowalnych z dokładnością stałą) \\
+    BA   & -- & Barabási-Albert \\
+    ER   & -- & Erdős-Rényi \\
+    ILP  & -- & Integer Linear Programming (programowanie liniowe całkowitoliczbowe) \\
+    NP   & -- & Nondeterministic Polynomial time (klasa problemów decyzyjnych rozwiązywalnych w czasie wielomianowym przez maszynę niedeterministyczną) \\
+    PTAS & -- & Polynomial-Time Approximation Scheme (schemat aproksymacji w czasie wielomianowym) \\
+    SaaS & -- & Software as a Service (oprogramowanie jako usługa) \\
+    SNAP & -- & Stanford Network Analysis Project \\
+    WS   & -- & Watts-Strogatz \\
 \end{tabular}
