prawie już koniec

--- a/docs/thesis/frontmatter/work_division.tex
+++ b/docs/thesis/frontmatter/work_division.tex
@@ -5,6 +5,6 @@ Część implementacyjna obejmowała przygotowanie architektury projektu, moduł
 
 Część teoretyczna, stanowiąca zasadniczą treść pracy magisterskiej, została podzielona według rozdziałów. Maciej Sztramski przygotował rozdziały~1--4, natomiast Marcin Połajdowicz odpowiadał za rozdziały~6--9. Rozdział~5 opracowano wspólnie, dzieląc obowiązki zgodnie z zakresem prac implementacyjnych nad poszczególnymi algorytmami.
 
-Eksperymenty obliczeniowe przeprowadził Marcin Połajdowicz. Obejmowały one testy dla schematu licencyjnego \emph{Duolingo Super}, porównania z wariantem dominowania rzymskiego, symulacje dynamiczne oraz analizę rozszerzeń modelu licencjonowania. Marcin Połajdowicz przygotował także wszystkie wykresy i tabele prezentowane w rozdziałach~6--9 (oraz odpowiadające im materiały w rozdziale~5). Rysunki ilustrujące definicje i przykłady w rozdziale~3 (m.in. dominowanie rzymskie, licencje grupowe, przykładowe zbiory dominujące) wykonał Maciej Sztramski.
+Eksperymenty obliczeniowe przeprowadził Marcin Połajdowicz. Obejmowały one testy dla schematu licencyjnego Duolingo Super, porównania z wariantem dominowania rzymskiego, symulacje dynamiczne oraz analizę rozszerzeń modelu licencjonowania. Marcin Połajdowicz przygotował także wszystkie wykresy i tabele prezentowane w rozdziałach~6--9 (oraz odpowiadające im materiały w rozdziale~5). Rysunki ilustrujące definicje i przykłady w rozdziale~3 (m.in. dominowanie rzymskie, licencje grupowe, przykładowe zbiory dominujące) wykonał Maciej Sztramski.
 
 Redakcję i korektę przeprowadzono krzyżowo: Marcin Połajdowicz zredagował rozdziały~1--5, a Maciej Sztramski rozdziały~6--9 wraz z Aneksem. Aneks (załączniki) przygotował w całości Marcin Połajdowicz.
