--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -46,8 +46,8 @@
   title        = {Network Algorithms (Graduate Course) -- Lecture Notes},
   howpublished = {Course notes},
   year         = {2012},
-  note         = {Graduate course at the University of Freiburg, Summer Term 2012},
-  url          = {https://algo.inf.uni-freiburg.de/teaching/ss12/network-algorithms/}
+  note         = {Dostęp: 2025-09;Graduate course at the University of Freiburg, Summer Term 2012},
+  url          = {https://ac.informatik.uni-freiburg.de/teaching/ss_12/network-algorithms.php/}
 }
 
 @book{haynes1998domination,
@@ -158,8 +158,7 @@
   title        = {Near-Optimal Distributed Dominating Set in Bounded Arboricity Graphs},
   journaltitle = {arXiv preprint arXiv:2206.05174},
   year         = {2022},
-  doi          = {10.48550/arXiv.2206.05174},
-  note         = {Also appears in PODC 2022}
+  doi          = {10.48550/arXiv.2206.05174}
 }
 
 @book{henning2013roman,
@@ -248,7 +247,7 @@
   booktitle = {Advances in Neural Information Processing Systems 25},
   year      = {2012},
   pages     = {548--556},
-  note      = {Proceedings of NeurIPS 2012},
+  note      = {Dostęp: 2025-09;Proceedings of NeurIPS 2012},
   url       = {https://papers.nips.cc/paper/4532-learning-to-discover-social-circles-in-ego-networks}
 }
 
@@ -263,26 +262,20 @@
   doi          = {10.1016/j.cosrev.2012.12.001}
 }
 
-@misc{Ugander2011,
-  author       = {Ugander, Johan and Karrer, Brian and Backstrom, Lars and Marlow, Cameron},
-  title        = {The Anatomy of the Facebook Social Graph},
-  howpublished = {arXiv preprint arXiv:1111.4503},
-  year         = {2011},
-  url          = {https://arxiv.org/abs/1111.4503}
-}
-
-@misc{wikiDominatingSet,
-  title        = {Dominating set},
-  howpublished = {Wikipedia},
-  date         = {2024},
-  url          = {https://en.wikipedia.org/wiki/Dominating_set}
+@article{Ugander2011,
+  author = {Ugander, Johan and Karrer, Brian and Backstrom, Lars and Marlow, Cameron},
+  year = {2011},
+  title = {The Anatomy of the Facebook Social Graph},
+  volume = {1111.4503},
+  journal = {arXiv preprint}
 }
 
 @misc{duolingo_family,
   title        = {Duolingo Family Plan},
   howpublished = {Product page},
   date         = {2024},
-  url          = {https://support.duolingo.com/hc/pl/articles/6159959913243-Plan-rodzinny-Super-Duolingo}
+  url          = {https://www.duolingo.com/family},
+  note         = {Dostep: 2025-09}
 }
 
 @misc{genai_usage,
@@ -350,46 +343,48 @@
   title        = {Subscription Economy Index},
   howpublished = {Industry report},
   date         = {2024},
-  url          = {https://www.zuora.com/resource/subscription-economy-index/}
+  url          = {https://www.zuora.com/resource/subscription-economy-index/},
+  note         = {Dostęp: 2025-09}
 }
 
 @misc{subscriptionEconomyPrice2024,
   title        = {Subscription Price Trends 2024},
   howpublished = {Industry report},
   date         = {2024},
-  url          = {https://recurly.com/press/recurly-releases-its-2024-state-of-subscriptions-report/}
+  url          = {https://recurly.com/press/recurly-releases-its-2024-state-of-subscriptions-report/},
+  note         = {Dostęp: 2025-09}
 }
 
-@online{spotify_price2024,
+@online{spotify_price2025,
   title  = {Spotify Premium - Plany i ceny (Polska)},
   author = {{Spotify Polska}},
   year   = {2025},
   url    = {https://www.spotify.com/pl/premium/},
-  note   = {Stan na 09.2025: Individual - 23.99 PLN, Duo - 30.99 PLN, Family - 37.99 PLN miesięcznie.}
+  note   = {Dostęp: 2025-09; Individual -- 23.99 PLN, Duo -- 30.99 PLN, Family -- 37.99 PLN miesięcznie.}
 }
 
 @misc{duolingo_app2024,
   title        = {Super Duolingo - ceny w aplikacji mobilnej (Polska)},
   author       = {{Duolingo}},
   year         = {2025},
-  howpublished = {Aplikacja mobilna Duolingo, wersja na Android},
-  note         = {Stan na 09.2025: Individual - 13.99 PLN, Family - 29.17 PLN miesięcznie.}
+  howpublished = {Aplikacja mobilna Duolingo},
+  note         = {Dostęp: 2025-09; Individual -- 13.99 PLN, Family -- 29.17 PLN miesięcznie.}
 }
 
 @misc{snapnets,
   author       = {Stanford Network Analysis Project},
   title        = {SNAP Datasets},
   howpublished = {\url{https://snap.stanford.edu/data/}},
-  year         = {2024},
+  year         = {2014},
   note         = {Dostęp: 2025-09}
 }
 
-@online{spotify_price2025,
-  title  = {Spotify Premium -- Plany i ceny (Polska)},
-  author = {{Spotify Polska}},
+@online{netflix_price2025,
+  title  = {Netflix -- Plany i ceny (Polska)},
+  author = {{Netflix Polska}},
   year   = {2025},
-  url    = {https://www.spotify.com/pl/premium/},
-  note   = {Stan na 09.2025: Basic -- 33.00 PLN, Standard -- 49.00 PLN, Premium -- 67.00 PLN miesięcznie.}
+  url    = {https://www.netflix.com/signup/planform},
+  note   = {Dostęp: 2025-09; Basic -- 33.00 PLN, Standard -- 49.00 PLN, Premium -- 67.00 PLN miesięcznie.}
 }
 
 % Statistical testing references used in Chapter 6
@@ -418,9 +413,7 @@
   author = {Nemenyi, Peter B.},
   title  = {Distribution-free Multiple Comparisons},
   school = {Princeton University},
-  year   = {1963},
-  url    = {https://apps.dtic.mil/sti/pdfs/AD0634082.pdf},
-  note   = {DTIC Accession Number AD0634082}
+  year   = {1963}
 }
 
 % Netflix pricing/help reference for Polish plans page
@@ -429,14 +422,13 @@
   author = {{Netflix Help Center}},
   year   = {2025},
   url    = {https://help.netflix.com/pl/node/24926},
-  note   = {Cennik i zasady planów w Polsce; stan na 09.2025}
+  note   = {Dostęp: 2025-09; Cennik i zasady planów w Polsce}
 }
 
 @misc{mathworldDominatingSet,
   title        = {Dominating Set -- Wolfram MathWorld},
   howpublished = {\url{https://mathworld.wolfram.com/DominatingSet.html}},
-  note         = {Definicje: minimal dominating set, domination number},
-  year         = {2025}
+  note         = {Dostęp: 2025-09}
 }
 
 @article{Roman2DominationSurvey,
@@ -451,13 +443,17 @@
   doi       = {10.3390/math12172771}
 }
 
-@inproceedings{CapDom,
-  author    = {Daniel Lokshtanov and Dániel Marx and Saket Saurabh},
-  title     = {Known Algorithms on Capacitated Domination},
-  booktitle = {Proceedings of IWPEC},
-  year      = {2011},
-  pages     = {351--362},
-  url       = {https://sites.cs.ucsb.edu/~daniello/papers/capdomset.pdf}
+@incollection{CapDom,
+  author    = {Michael Dom and Daniel Lokshtanov and Saket Saurabh and Yngve Villanger},
+  title     = {Capacitated Domination and Covering: A Parameterized Perspective},
+  booktitle = {Algorithms and Computation -- 3rd International Workshop on Parameterized and Exact Computation, IWPEC 2008},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5018},
+  pages     = {78--90},
+  year      = {2008},
+  publisher = {Springer},
+  address   = {Berlin / Heidelberg},
+  doi       = {10.1007/978-3-540-79723-4\_9}
 }
 
 @article{albert2002statistical,
@@ -482,29 +478,21 @@
 
 @article{watts1998collective,
   title   = {Collective dynamics of 'small-world' networks},
-  author  = {Watts, D.J. and Strogatz, S.H.},
+  author  = {Watts, D. J. and Strogatz, S. H.},
   journal = {Nature},
   volume  = {393},
   number  = {6684},
   pages   = {440--442},
-  year    = {1998}
+  year    = {1998},
+  doi     = {10.1038/30918}
 }
+
 
 @book{stanley1997enumerative,
-  title     = {Enumerative Combinatorics, Volume 1},
-  author    = {Richard P. Stanley},
-  year      = {1997},
+  author    = {Stanley, Richard P.},
+  title     = {Enumerative Combinatorics: Volume 1},
   publisher = {Cambridge University Press},
-  pages     = {74--78},
-  isbn      = {9780521789875}
-}
-
-@article{pluta2006topologia,
-  author  = {Roman Pluta},
-  title   = {Topologia sieci złożonych},
-  journal = {Zeszyty Naukowe Instytutu Administracji Akademii im. Jana Długosza w Częstochowie Seria: Gubernaculum et Administratio},
-  year    = {2006},
-  volume  = {IV},
-  pages   = {55--66},
-  url     = {http://dlibra.bg.ajd.czest.pl:8080/Content/1687/gubernaculum4-55.pdf}
+  year      = {1997},
+  isbn      = {0521663512},
+  isbn13    = {9780521663519}
 }
