--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -1,12 +1,16 @@
 @article{ALIMONTI2000123,
-  author       = {Alimonti, Paola and Kann, Viggo},
-  title        = {Some APX-completeness results for cubic graphs},
-  journaltitle = {Theoretical Computer Science},
-  year         = {2000},
-  volume       = {237},
-  number       = {1--2},
-  pages        = {123--134},
-  doi          = {10.1016/S0304-3975(99)00426-0}
+title = {Some APX-completeness results for cubic graphs},
+journal = {Theoretical Computer Science},
+volume = {237},
+number = {1},
+pages = {123-134},
+year = {2000},
+issn = {0304-3975},
+doi = {10.1016/S0304-3975(98)00158-3},
+url = {https://www.sciencedirect.com/science/article/pii/S0304397598001583},
+author = {Paola Alimonti and Viggo Kann},
+keywords = {Computational complexity, NP-hard optimization problems, approximation, APX-completeness, cubic graphs},
+abstract = {Four fundamental graph problems, Minimum vertex cover, Maximum independent set, Minimum dominating set and Maximum cut, are shown to be APX-complete even for cubic graphs. Therefore, unless P=NP, these problems do not admit any polynomial time approximation scheme on input graphs of degree bounded by three.}
 }
 
 @article{chlebik2008,
@@ -231,15 +235,17 @@
   doi          = {10.1080/0022250X.2001.9990249}
 }
 
-@book{Brandes2004,
-  editor    = {Brandes, Ulrik and Erlebach, Thomas},
+@book{Brandes2005,
+  editor    = {Ulrik Brandes and Thomas Erlebach},
   title     = {Network Analysis: Methodological Foundations},
   publisher = {Springer},
   year      = {2005},
   series    = {Lecture Notes in Computer Science},
   volume    = {3418},
-  doi       = {10.1007/978-3-540-31955-9}
+  doi       = {10.1007/b106453},
+  isbn      = {978-3-540-24979-5}
 }
+
 
 @inproceedings{McAuley2012,
   author    = {McAuley, Julian and Leskovec, Jure},
@@ -453,7 +459,7 @@
   year      = {2008},
   publisher = {Springer},
   address   = {Berlin / Heidelberg},
-  doi       = {10.1007/978-3-540-79723-4\_9}
+  doi       = {10.1007/978-3-540-79723-4_9}
 }
 
 @article{albert2002statistical,
