--- a/docs/thesis/preamble.tex
+++ b/docs/thesis/preamble.tex
@@ -87,6 +87,8 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\floatname{algorithm}{Algorytm}
+\renewcommand{\listalgorithmname}{Spis algorytmów}
 
 \newcommand{\Adj}{\mathrm{Adj}}
 \DeclareMathOperator{\cost}{cost}
